[metadata]
name = spx17979-driver
version = attr: spx17979.__version__
description = Python driver for the SparkFun SPX-17979 Qwiic Sound Trigger
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rogiervandergeer/spx17979-driver
author = Rogier van der Geer
author_email = rogier@vander-geer.nl
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Topic :: System :: Hardware :: Hardware Drivers
    Typing :: Typed

[options]
zip_safe = True
include_package_data = True
package_dir=
    =src
packages = find:
install_requires =
    pca9536-driver >= 0.1.1

[options.package_data]
* = py.typed

[options.packages.find]
where=src
